Project

General

Profile

Actions

Bug #46766

closed

mds: memory leak during cache drop

Added by Patrick Donnelly almost 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The MDSGatherBuilder used to recall state is not freed.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #46940: octopus: mds: memory leak during cache dropResolvedNathan CutlerActions
Copied to CephFS - Backport #46941: nautilus: mds: memory leak during cache dropResolvedWei-Chung ChengActions
Actions #1

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 36359
Actions #2

Updated by Patrick Donnelly almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #46940: octopus: mds: memory leak during cache drop added
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #46941: nautilus: mds: memory leak during cache drop added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF