mds: place MDSGatherBuilder on the stack

This was not meant to be heap allocated; it's not freed via the Gather
machinery.

Fixes: https://tracker.ceph.com/issues/46766
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 5f5307679972c7600c9b0704f750a459046f701c)

Conflicts:
	src/mds/Server.cc
	src/mds/Server.h
	  - minor conflict with unintroduced variables